--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Pool House Music</div>
-                <div class="masthead-heading text-uppercase">Christchurch, New Zealand</div>
+                <div class="masthead-subheading">Presenting</div>
+                <div class="masthead-heading text-uppercase">Pool House Music</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Show Me More</a>
             </div>
         </header>
