--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">Who We Are</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">Shop</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Songs</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">Releases</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#team">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -48,8 +48,8 @@
         <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Shop</h2>
+                    <h3 class="section-subheading text-muted">Coming Soon...</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -83,7 +83,7 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Songs</h2>
+                    <h2 class="section-heading text-uppercase">Music</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="row">
