--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
                             <h4>Will Georgeson</h4>
@@ -62,7 +62,7 @@
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Will Georgeson LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
                             <h4>Harry van der Gulik</h4>
@@ -72,11 +72,21 @@
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Harry van der Gulik LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
                             <h4>Sam Crisp (Crispy)</h4>
                             <p class="text-muted">Bass</p>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Sam Crisp Twitter Profile"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Sam Crisp Facebook Profile"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Sam Crisp LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
+                            <h4>Flynn</h4>
+                            <p class="text-muted">Drummer</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Sam Crisp Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Sam Crisp Facebook Profile"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Sam Crisp LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
