--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">The Boys</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">We're Pool House</h2>
+                    <h3 class="section-subheading text-muted">We're an indie rock band from Christchurch, New Zealand, made up of friends Will, Harry, Crispy, & Flynn.</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-3">
