--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">We're Pool House</h2>
+                    <h2 class="section-heading text-uppercase">We Are Pool House</h2>
                     <h3 class="section-subheading text-muted">We're an indie rock band from Christchurch, New Zealand, made up of friends Will, Harry, Crispy, & Flynn.</h3>
                 </div>
                 <div class="row">
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
+                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">You can check out our music, shows, merch and all that good stuff below. Cheers!</p></div>
                 </div>
             </div>
         </section>
