--- a/index.html
+++ b/index.html
@@ -55,29 +55,29 @@
                     <div class="col-lg-3">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
-                            <h4>Will Georgeson</h4>
-                            <p class="text-muted">Lead Singer and Guitarist</p>
+                            <h4>Will</h4>
+                            <p class="text-muted">can sing better than most</p>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
-                            <h4>Harry van der Gulik</h4>
-                            <p class="text-muted">Guitarist</p>
+                            <h4>Harry</h4>
+                            <p class="text-muted">pretty good strummer</p>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
-                            <h4>Sam Crisp (Crispy)</h4>
-                            <p class="text-muted">Bass</p>
+                            <h4>Crispy</h4>
+                            <p class="text-muted">crispy can certainly move those fingers</p>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/4.jpg" alt="..." />
                             <h4>Flynn</h4>
-                            <p class="text-muted">Drummer</p>
+                            <p class="text-muted">expert at banging things</p>
                         </div>
                     </div>
                 </div>
