--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Presenting</div>
                 <div class="masthead-heading text-uppercase">Pool House Music</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Show Me More</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Show Me the Good Stuff</a>
             </div>
         </header>
         <!-- Band-->
