--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#team">Who We Are</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Music</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">Shows</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">Calender</a></li>
                         <li class="nav-item"><a class="nav-link" href="#services">Shop</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
@@ -196,35 +196,35 @@
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Shows</h2>
-                    <h3 class="section-subheading text-muted">Check out our upcoming gigs!</h3>
+                    <h2 class="section-heading text-uppercase">Calender</h2>
+                    <h3 class="section-subheading text-muted">Check out what's coming up for Pool House!</h3>
                 </div>
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>April 2023</h4>
-                                <h4 class="subheading">*location*</h4>
+                                <h4>27th April 2023</h4>
+                                <h4 class="subheading">Haere-roa Event Centre</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Description about the gig/show</p></div>
+                            <div class="timeline-body"><p class="text-muted">Catch us at Haere-roa this Thursday where we'll be playing at Mono, come along for a boogie yewww</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>April 2023</h4>
-                                <h4 class="subheading">*location*</h4>
+                                <h4>May 2023</h4>
+                                <h4 class="subheading">Release of *song</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Description about the gig/show</p></div>
+                            <div class="timeline-body"><p class="text-muted">Description about the release</p></div>
                         </div>
                     </li>
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>April 2023</h4>
+                                <h4>May 2023</h4>
                                 <h4 class="subheading">*location*</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">Description about the gig/show</p></div>
