--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <header class="masthead">
             <div class="container">
                 <div class="masthead-heading text-uppercase">Pool House Music</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Show Me the Good Stuff</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#team">Show Me the Good Stuff</a>
             </div>
         </header>
         <!-- Band-->
