--- a/index.html
+++ b/index.html
@@ -280,15 +280,20 @@
         </section>
         <!-- Clients-->
         <div class="py-5">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-md-3 col-sm-6 my-3">
+            <div class="container">        
+                <div class="row">
+                    <div class="col-12 text-center mb-4">
+                        <h2>Check out our music on the following platforms!</h2>
+                    </div>
+                </div>
+                <div class="row align-items-center justify-content-center">
+                    <div class="col-md-4 col-sm-6 my-3 text-center">
                         <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/spotify.png" alt="..." aria-label="Spotify Logo" /></a>
                     </div>
-                    <div class="col-md-3 col-sm-6 my-3">
+                    <div class="col-md-4 col-sm-6 my-3 text-center">
                         <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/apple.png" alt="..." aria-label="Apple Logo" /></a>
                     </div>
-                    <div class="col-md-3 col-sm-6 my-3">
+                    <div class="col-md-4 col-sm-6 my-3 text-center">
                         <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/youtube.png" alt="..." aria-label="Youtube Logo" /></a>
                     </div>
                 </div>
