--- a/index.html
+++ b/index.html
@@ -288,13 +288,13 @@
                 </div>
                 <div class="row align-items-center justify-content-center">
                     <div class="col-md-4 col-sm-6 my-3 text-center">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/spotify.png" alt="..." aria-label="Spotify Logo" /></a>
+                        <a href="https://open.spotify.com/artist/1tCQas73x7KX8maY66bLg4"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/spotify.png" alt="..." aria-label="Spotify Logo" /></a>
                     </div>
                     <div class="col-md-4 col-sm-6 my-3 text-center">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/apple.png" alt="..." aria-label="Apple Logo" /></a>
+                        <a href="https://music.apple.com/us/artist/pool-house/1654233974"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/apple.png" alt="..." aria-label="Apple Logo" /></a>
                     </div>
                     <div class="col-md-4 col-sm-6 my-3 text-center">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/youtube.png" alt="..." aria-label="Youtube Logo" /></a>
+                        <a href="https://www.youtube.com/watch?v=PzDqJDUtXaw&ab_channel=PoolHouseMusic"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/youtube.png" alt="..." aria-label="Youtube Logo" /></a>
                     </div>
                 </div>
             </div>
