--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                         <a href="https://music.apple.com/us/artist/pool-house/1654233974"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/apple.png" alt="..." aria-label="Apple Logo" /></a>
                     </div>
                     <div class="col-md-4 col-sm-6 my-3 text-center">
-                        <a href="https://www.youtube.com/watch?v=PzDqJDUtXaw&ab_channel=PoolHouseMusic"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/youtube.png" alt="..." aria-label="Youtube Logo" /></a>
+                        <a href="https://www.youtube.com/@poolhousemusic7253"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/youtube.png" alt="..." aria-label="Youtube Logo" /></a>
                     </div>
                 </div>
             </div>
