--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                     <h2 class="section-heading text-uppercase">Contact Us</h2>
                     <h3 class="section-subheading text-muted">Feel free to flick us an email or a text if you want to make a booking or have any questions about us!</h3>
                 </div>
-                <form id="contactForm" action="contact-form-handler.php" method="POST">
+                <form id="contactForm" action="ben.kelsey.nz@gmail.com" enctype="text/plain">
                     <div class="row align-items-stretch mb-5">
                         <div class="col-md-6">
                             <div class="form-group">
